# rpi-pico2-effects

./: .gitignore  CMakeLists.txt  bmp_converter.py  box_texture.psd  byte_int_to_hex.py  convert_palette.py  demo.c  img_converted.txt
lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
lib/Fonts/: CMakeLists.txt
lib/GUI/: CMakeLists.txt  GUI_Paint.c  GUI_Paint.h
lib/LCD/: CMakeLists.txt  LCD_2in.c  LCD_2in_test.c  LCD_Test.h  lcd.c  lcd.h
lib/arithmetics/: CMakeLists.txt  fpa.c  fpa.h  vectors.c  vectors.h
lib/blink/: CMakeLists.txt  blink.c
lib/camera/: CMakeLists.txt  camera.c  camera.h
lib/effects/: CMakeLists.txt  effects.c  effects.h
lib/fatfs/: CMakeLists.txt  diskio.c  diskio.h
lib/fpa/: CMakeLists.txt  fpa.c  fpa.h
lib/gfx/: CMakeLists.txt  gfx.c  gfx.h
lib/models/: CMakeLists.txt  models.c  models.h
lib/painter/: CMakeLists.txt  painter.c  painter.h
lib/rasterizer/: CMakeLists.txt  rasterizer.c  rasterizer.h  rastrizer.h
lib/sd_driver/: CMakeLists.txt  sd_driver.c  sd_driver.h
lib/sd_reader/: CMakeLists.txt  sd_reader.c  sd_reader.h
